# aws-lambda-c-runtime

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: aws-lambda-c-runtime-config.cmake
examples/minimalist/: CMakeLists.txt  main.c
examples/s3/: CMakeLists.txt  README.md
examples/s3/include/: awsbridge.h
examples/s3/src/: awsbridge.cpp  main.c
include/aws-lambda/c-runtime/: runtime.h  service-logic.h  utils.h  version.h
include/aws-lambda/ext/: hashmap.h  string-builder.h
include/aws-lambda/http/: jsmh.h  response.h  service-integration.h
packaging/: packager
src/: hashmap.c  response.c  runtime.c  service-integration.c  service-logic.c  string-builder.c  utils.c  version.c.in
